# Test-task-Event-Poster

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
.pytest_cache/v/cache/: nodeids
events/: admin.py  filters.py  middleware.py  mixins.py  models.py  serializers.py  services.py  tasks.py  test.py  urls.py  views.py
events/api/filters/: filters.py
events/api/serializers/: __init__.py  booking.py  event.py  notification.py  rating.py  tag.py
events/api/views/: __init__.py  booking.py  event.py  notification.py  rating.py
events/domain/models/: __init__.py  booking.py  event.py  notification.py  rating.py
events/domain/repositories/: __init__.py  booking.py  event.py  rating.py
events/domain/services/: __init__.py  booking.py  event.py  rating.py
events/domain/tasks/: __init__.py  event_tasks.py  notification_tasks.py
events/migrations/: 0001_initial.py  0002_rating.py  0003_tag.py  0004_event_tags.py
events/repositories/: booking.py  event.py  rating.py
events/services/: booking.py  event.py  rating.py
events/tests/integration/: test_filters.py  test_middleware.py  test_notifications.py  test_views.py
events/tests/unit/: test_booking.py  test_models.py  test_tags.py  test_tasks.py
events_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: test_booking.py  test_filters.py  test_middleware.py  test_models.py  test_notifications.py  test_tags.py  test_tasks.py  test_views.py
